use grid layout to avoid overlap in header

--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,5 +1,11 @@
 #header {
-    position: relative;
+    display: grid;
+    grid-gap: 0 $padding;
+    grid-template-columns: 1fr max-content;
+}
+
+#header-bottom {
+    grid-column: 1 / 3;
 }
 
 #address {
@@ -22,10 +28,4 @@
 .brand {
     font-size: 150%;
     margin: 0;
-}
-
-@media (min-width: $breakpoint) {
-    .brand-link img {
-        max-width: 40%;
-    }
 }
